--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </a>
             <button class="btn btn-secondary shadow rounded-2" style="margin-left: 5%;margin-right: 5%;">yo</button>
             <input type="email" class="form-control shadow" name="Email" id="Email" aria-describedby="Email" placeholder="Email">
-            <button type="submit" class="btn btn-primary" style="background-color: rgb(96, 216, 96);">✅</button>
+            <button type="submit" class="btn btn-primary" style="background-color: rgb(96, 216, 96);"></button>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     </body>
